# mayastor-dependencies

apis/events/protobuf/v1/: event.proto
events-api/protobuf/v1/: event.proto
events-api/src/: event_traits.rs
mbus-api/: Cargo.toml
mbus-api/src/: common.rs  lib.rs  mbus_nats.rs  message.rs  messaged.rs
mbus-api/src/common/: constants.rs  errors.rs  retry.rs
mbus_api/: Cargo.toml
mbus_api/src/: lib.rs  mbus_nats.rs  message.rs  nats.rs
