[package]
name = "mbus-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.28.0"
bytes = "1.4.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
async-trait = "0.1.64"
futures = "0.3.26"
snafu = "0.7.4"

# stor-port = { path = "../../../control-plane/stor-port" }
anyhow = "1.0.69"